// Copyright (C) 2022 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

option go_package = "storj.io/edge/pkg/auth/badgerauth/pb";

package badgerauth;

import "badgerauth.proto";

message InvalidateRecordRequest {
  bytes key = 1;
  string reason = 2;
}
message InvalidateRecordResponse {}

message UnpublishRecordRequest { bytes key = 1; }
message UnpublishRecordResponse {}

message DeleteRecordRequest { bytes key = 1; }
message DeleteRecordResponse {}

service AdminService {
  rpc InvalidateRecord(InvalidateRecordRequest)
      returns (InvalidateRecordResponse);
  rpc UnpublishRecord(UnpublishRecordRequest) returns (UnpublishRecordResponse);
  rpc DeleteRecord(DeleteRecordRequest) returns (DeleteRecordResponse);
}
